iter_language/tests/corpus/compose/invalid/command-extract-jq-removed.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: command-extract-jq-removed.iter
---
Error: unknown extractor `jq`
   ╭─[command-extract-jq-removed.iter:5:15]
   │
 5 │     extract = jq(".items[]")
   │               ───────┬──────  
   │                      ╰──────── unknown extractor `jq`
   │ 
   │ Help: supported: regex("...")
───╯
